fine-tunes text exercise for past perfect

--- a/french/pages/exercise_pastperfect.html
+++ b/french/pages/exercise_pastperfect.html
@@ -49,7 +49,7 @@
 
                     <li>
                         Aussitôt que Julie (<b title="avait découvert">découvrir</b>)
-                        <input type="text" pattern="avait découvert">
+                        <input type="text" class="wide" pattern="avait découvert">
                         la boîte, elle s’est mise à crier.
                     </li>
 
@@ -79,7 +79,7 @@
 
                     <li>
                         Lorsque vous (<b title="vous étiez sentis">se sentir</b>)
-                        <input type="text" pattern="vous étiez sentis">
+                        <input type="text" class="wide" pattern="vous étiez sentis">
                         mieux, nous avons recommencé à nous voir.
                     </li>
 
@@ -97,7 +97,7 @@
 
                     <li>
                         Parce qu’ils (<b title="s'étaient dépêchés">se dépêcher</b>)
-                        <input type="text" pattern="s'étaient dépêchés">
+                        <input type="text" class="wide" pattern="s'étaient dépêchés">
                         , ils sont arrivés à temps pour le bal.
                     </li>
 
@@ -127,7 +127,7 @@
 
                     <li>
                         Après que vous (<b title="vous étiez enrichis">s’enrichir</b>)
-                        <input type="text" pattern="vous étiez enrichis">
+                        <input type="text" class="wide" pattern="vous étiez enrichis">
                         , vous vous êtes souvenus de vos débuts difficiles.
                     </li>
 
@@ -156,14 +156,14 @@
                     </li>
 
                     <li>
-                        Vous êtes sorti(e)s précipitamment après que vous (<b title="aviez mis">mettre</b>)
+                        Vous êtes sortis précipitamment après que vous (<b title="aviez mis">mettre</b>)
                         <input type="text" pattern="aviez mis">
                         votre chapeau.
                     </li>
 
                     <li>
                         Quand elles (<b title="s'étaient aperçues">s’apercevoir</b>)
-                        <input type="text" pattern="s'étaient aperçues">
+                        <input type="text" class="wide" pattern="s'étaient aperçues">
                         de leur erreur, elles ont rougi.
                     </li>
 
@@ -186,9 +186,9 @@
                     </li>
 
                     <li>
-                        Nous nous sommes excusé(e)s des propos que nous
+                        Nous nous sommes excusés des propos que nous
                         (<b title="avions prononcés">prononcer</b>)
-                        <input type="text" pattern="avions prononcés">
+                        <input type="text" class="wide" pattern="avions prononcés">
                         .
                     </li>
 
@@ -207,32 +207,32 @@
 
                     <li>
                         Les enfants ont chanté les chansons qu’ils (<b title="avaient apprises">apprendre</b>)
-                        <input type="text" pattern="avaient apprises">
+                        <input type="text" class="wide" pattern="avaient apprises">
                         de leur professeur.
                     </li>
 
                     <li>
                         J’ai lu un roman que je (<b title="m'étais procuré">se procurer</b>)
-                        <input type="text" pattern="m'étais procuré">
+                        <input type="text" class="wide" pattern="m'étais procuré">
                         à la bibliothèque centrale.
                     </li>
 
                     <li>
                         Vous attendiez la surprise que vos parents vous
                         (<b title="avaient promise">promettre</b>)
-                        <input type="text" pattern="avaient promise">
+                        <input type="text" class="wide" pattern="avaient promise">
                         .
                     </li>
 
                     <li>
                         Tu portais cette robe de soie bleue que
                         (<b title="j'avais cousue">je coudre</b>)
-                        <input type="text" pattern="j'avais cousue">
+                        <input type="text" class="wide" pattern="j'avais cousue">
                         .
                     </li>
 
                     <li>
-                        Je suis sorti(e) quand (<b title="j'avais pris">je prendre</b>)
+                        Je suis sorti quand (<b title="j'avais pris">je prendre</b>)
                         <input type="text" pattern="j'avais pris">
                         mes clés.
                     </li>
@@ -240,7 +240,7 @@
                     <li>
                         Il goûtait cette sauce aussitôt que tu
                         (<b title="l'avais préparée">la préparer</b>)
-                        <input type="text" pattern="l'avais préparée">
+                        <input type="text" class="wide" pattern="l'avais préparée">
                         .
                     </li>
 
@@ -261,13 +261,13 @@
                     <li>
                         Aussitôt que vous (<b title="aviez résolu">résoudre</b>)
                         <input type="text" pattern="aviez résolu">
-                        ce problème, vous êtes parti(e)s.
+                        ce problème, vous êtes partis.
                     </li>
 
                     <li>
                         Elle a médité pendant des jours sur une nouvelle que l’on
                         (<b title="avait répandue">répandre</b>)
-                        <input type="text" pattern="avait répandue">
+                        <input type="text" class="wide" pattern="avait répandue">
                         .
                     </li>
 
@@ -287,14 +287,14 @@
                     <li>
                         Il n’a plus parlé une fois qu’il
                         (<b title="avait convaincu">convaincre</b>)
-                        <input type="text" pattern="avait convaincu">
+                        <input type="text" class="wide" pattern="avait convaincu">
                         l’assistance du bien fondé de son opinion.
                     </li>
 
                     <li>
                         Elles ont regretté leur geste après qu’elles
                         (<b title="avaient descendu">descendre</b>)
-                        <input type="text" pattern="avaient descendu">
+                        <input type="text" class="wide" pattern="avaient descendu">
                         l’escalier.
                     </li>
 
@@ -308,7 +308,7 @@
                     <li>
                         Vous vous êtes installés à Paris une fois que vous
                         (<b title="vous étiez inscrits">s’inscrire</b>)
-                        <input type="text" pattern="vous étiez inscrits">
+                        <input type="text" class="wide" pattern="vous étiez inscrits">
                         à l’université.
                     </li>
                 </ol>
