--- a/french/index.html
+++ b/french/index.html
@@ -76,11 +76,20 @@
     <a href="pages/exercise_conditionalperfect.html">exercice de texte</a>
   </div>
 
+  <hr />
+
   <div class="card">
     <header>La concordance du passé</header>
     <a
       href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F959326456_Le_pass__compos__et_l_imparfait_d_butant_interm_diaire.pdf">théorie</a>
     <a href="pages/exercise_concordance.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <header>Les phrases de condition</header>
+    <a
+      href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F1421158839_Les_phrases_de_condition_interm_diaire.pdf">théorie</a>
+    <a href="pages/exercise_concordance_conditional.html">exercice de texte</a>
   </div>
 
   <h3>
