--- a/french/pages/exercise_conditionalpresent.html
+++ b/french/pages/exercise_conditionalpresent.html
@@ -41,8 +41,8 @@
                     <input type="text" pattern="prendrais">
                     rendez-vous chez le coiffeur et je lui (<b title="demanderais">demander</b>)
                     <input type="text" pattern="demanderais">
-                    de me faire une nouvelle tête. (<b title="[Jj]'irais">Je aller</b>)
-                    <input type="text" pattern="irais">
+                    de me faire une nouvelle tête. (<b title="J'irais">Je aller</b>)
+                    <input type="text" pattern="[Jj]'irais">
                     aussi magasiner et je (<b title="achèterais">acheter</b>)
                     <input type="text" pattern="achèterais">
                     des nouveaux vêtements. Je
