fine-tuned stats

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -20,7 +20,7 @@
 
 
 <body>
-    <main spellcheck="false">
+    <main spellcheck="false" class="wide">
         <article>
             <table>
                 <caption>Statistiques</caption>
@@ -33,6 +33,7 @@
                         <th colspan="2">futur simple</th>
                         <th colspan="2">plus-que-parfait</th>
                         <th colspan="2">conditionnel présent</th>
+                        <th colspan="2">conditionnel passé</th>
                         <th colspan="2">concordance</th>
                     </tr>
                     <tr>
@@ -60,8 +61,12 @@
                         <th><a href="conjugations.html?Le%20conditionnel%20pr%C3%A9sent">liste</a></th>
                         <th><a href="exercise_conditionalpresent.html">texte</a></th>
 
+                        <!-- conditionnel passé -->
+                        <th><a href="conjugations.html?Le%20conditionnel%20passé">liste</a></th>
+                        <th><a href="exercise_conditionalperfect.html">texte</a></th>
+
                         <!-- concordance -->
-                        <th><a href="exercise_concordance.html">imp.- passé c.</a></th>
+                        <th><a href="exercise_concordance.html" title="imparfait - passé composé">i.-p.c.</a></th>
                         <th><a href="exercise_concordance_conditional.html">si+...</a></th>
                     </tr>
                 </thead>
@@ -87,6 +92,9 @@
 
                             <td class="conjugations.html?Le%20conditionnel%20pr%C3%A9sent"></td>
                             <td class="exercise_conditionalpresent.html"></td>
+
+                            <td class="conjugations.html?Le%20conditionnel%20pass%C3%A9"></td>
+                            <td class="exercise_conditionalperfect.html"></td>
 
                             <td class="exercise_concordance.html"></td>
                             <td class="exercise_concordance_conditional.html"></td>
