added concordance for 3 past tenses

--- a/french/index.html
+++ b/french/index.html
@@ -54,8 +54,7 @@
 
   <div class="card">
     <header>Le plus-que-parfait</header>
-    <a
-      href="https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Foraprdnt.uqtr.uquebec.ca%2Fportail%2Fdocs%2FGSC2213%2FF525458257_le_plus_que_parfait_th_orie.pptx&wdOrigin=BROWSELINK">théorie</a>
+    <a href="pdf/plus-que-parfait.pdf">théorie</a>
     <a href="pages/conjugations.html?Le%20plus-que-parfait">exercice de liste de verbes</a>
     <a href="pages/exercise_pastperfect.html">exercice de texte</a>
   </div>
@@ -76,13 +75,22 @@
     <a href="pages/exercise_conditionalperfect.html">exercice de texte</a>
   </div>
 
+  <h3>
+    <a class="wide" href="pages/conjugations_mixed.html?Conjugaisons%20mélangées">Conjugaisons mélangées</a>
+  </h3>
+
   <hr />
 
   <div class="card">
-    <header>La concordance du passé</header>
-    <a
-      href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F959326456_Le_pass__compos__et_l_imparfait_d_butant_interm_diaire.pdf">théorie</a>
+    <header>La concordance du passé composé et de l'imparfait</header>
+    <a href="pdf/concordance2.pdf">théorie</a>
     <a href="pages/exercise_concordance.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <header>La concordance du passé composé, de l'imparfait et du plus-que-parfait</header>
+    <a href="pdf/concordance3.pdf">théorie</a>
+    <a href="pages/exercise_concordance3.html">exercice de texte</a>
   </div>
 
   <div class="card">
@@ -92,10 +100,7 @@
     <a href="pages/exercise_concordance_conditional.html">exercice de texte</a>
   </div>
 
-  <h3>
-    <a href="pages/conjugations_mixed.html?Conjugaisons%20mélangées">Conjugaisons mélangées</a>
-  </h3>
-
+  <hr />
 
   <h3>
     <a class="wide" href="pages/stats.html">Statistiques</a>
