--- a/french/pages/exercise_pastperfect.html
+++ b/french/pages/exercise_pastperfect.html
@@ -280,7 +280,7 @@
                     <li>
                         Je leur ai donné le bijou seulement après qu’ils
                         (<b title="l'avaient payé">le payer</b>)
-                        <input type="text" pattern="l'avaient payé">
+                        <input type="text" class="wide" pattern="l'avaient payé">
                         .
                     </li>
 
