added past perfect to mixed conjugation page

--- a/french/pages/conjugations_mixed.html
+++ b/french/pages/conjugations_mixed.html
@@ -42,13 +42,18 @@
                     <input type="checkbox" class="verb-tense-checkbox" name="present" checked="checked">Le présent
                 </label>
                 <label>
-                    <input type="checkbox" class="verb-tense-checkbox" name="presentperfect" checked="checked">Le passé composé
+                    <input type="checkbox" class="verb-tense-checkbox" name="presentperfect" checked="checked">Le passé
+                    composé
                 </label>
                 <label>
                     <input type="checkbox" class="verb-tense-checkbox" name="imperfect" checked="checked">L'imparfait
                 </label>
                 <label>
                     <input type="checkbox" class="verb-tense-checkbox" name="future" checked="checked">Le futur simple
+                </label>
+                <label>
+                    <input type="checkbox" class="verb-tense-checkbox" name="pastperfect" checked="checked">Le
+                    plus-que-parfait
                 </label>
                 <label>
                     <input type="checkbox" class="verb-tense-checkbox" name="conditionalpresent" checked="checked">Le
