added input patterns for concordance 3

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -34,7 +34,7 @@
                         <th colspan="2">plus-que-parfait</th>
                         <th colspan="2">conditionnel présent</th>
                         <th colspan="2">conditionnel passé</th>
-                        <th colspan="2">concordance</th>
+                        <th colspan="3">concordance</th>
                     </tr>
                     <tr>
                         <!-- présent -->
@@ -67,7 +67,10 @@
 
                         <!-- concordance -->
                         <th><a href="exercise_concordance.html" title="imparfait - passé composé">i.-p.c.</a></th>
-                        <th><a href="exercise_concordance_conditional.html">si+...</a></th>
+                        <th><a href="exercise_concordance.html"
+                                title="imparfait - passé composé - plus-que-parfait">i-pc-pqp</a></th>
+                        <th><a href="exercise_concordance_conditional.html" title="Les phrases de condition">si...</a>
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
@@ -97,6 +100,7 @@
                             <td class="exercise_conditionalperfect.html"></td>
 
                             <td class="exercise_concordance.html"></td>
+                            <td class="exercise_concordance3.html"></td>
                             <td class="exercise_concordance_conditional.html"></td>
                         </tr>
                     </template>
