added errors to title hint for stats

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -67,7 +67,7 @@
 
                         <!-- concordance -->
                         <th><a href="exercise_concordance.html" title="imparfait - passé composé">i.-p.c.</a></th>
-                        <th><a href="exercise_concordance.html"
+                        <th><a href="exercise_concordance3.html"
                                 title="imparfait - passé composé - plus-que-parfait">i-pc-pqp</a></th>
                         <th><a href="exercise_concordance_conditional.html" title="Les phrases de condition">si...</a>
                         </th>
