fine-tuning concordance3

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -50,8 +50,8 @@
                             <input type="text" pattern="avaient">
                             l’habitude de sortir à la Chasse-Galerie qui (<b title="était">être</b>)
                             <input type="text" pattern="était">
-                            un bar étudiant qui se (<b title="situait">situer</b>)
-                            <input type="text" pattern="situait">
+                            un bar étudiant qui (<b title="situait">se situer</b>)
+                            <input type="text" pattern="se situait">
                             sur le campus de l’université.
 
                             Ces soirs-là, (<b title="c'était">ce être</b>)
@@ -68,7 +68,7 @@
                             Ils (<b title="avaient fait">faire</b>)
                             <input type="text" pattern="avaient fait">
                             les derniers devoirs et (<b title="avaient révisé">réviser</b>)
-                            <input type="text" pattern="avaient révisé">
+                            <input type="text" class="wide" pattern="avaient révisé">
                             toutes les notes que leur professeur (<b title="avait données">donner</b>)
                             <input type="text" pattern="avait données">
                             .
@@ -99,7 +99,7 @@
                             Soudain, il (<b title="a vu">voir</b>)
                             <input type="text" pattern="a vu">
                             la jolie jeune fille qu’il (<b title="avait rencontrée">rencontrer</b>)
-                            <input type="text" pattern="avait rencontrée">
+                            <input type="text" class="wide" pattern="avait rencontrée">
                             la semaine avant.
 
                             Il lui (<b title="a parlé">parler</b>)
@@ -119,12 +119,12 @@
                             radicalement.
 
                             Il (<b title="avait continué">continuer</b>)
-                            <input type="text" pattern="avait continué">
+                            <input type="text" class="wide" pattern="avait continué">
                             de fréquenter cette fille qui (<b title="venait">venir</b>)
                             <input type="text" pattern="venait">
                             elle aussi de Toronto et, quelques années plus tard,
                             ils (<b title="se sont mariés">se marier</b>)
-                            <input type="text" pattern="se sont mariés">
+                            <input type="text" class="wide" pattern="se sont mariés">
                             .
 
 
@@ -155,7 +155,7 @@
                             village d’Ogunquit dans le Maine aux États-Unis.
 
                             Il y a quelques années, nous (<b title="avions découvert">découvrir</b>)
-                            <input type="text" pattern="avions découvert">
+                            <input type="text" class="wide" pattern="avions découvert">
                             là une charmante vieille maison centenaire qui
                             (<b title="appartenait">appartenir</b>)
                             <input type="text" pattern="appartenait">
@@ -170,11 +170,11 @@
                             y réserver une chambre pour la semaine.
 
                             L’année dernière, nous (<b title="avons recommencé">recommencer</b>)
-                            <input type="text" pattern="avons recommencé">
+                            <input type="text" class="wide" pattern="avons recommencé">
                             cette expérience.
 
                             Avant de partir, nous (<b title="nous étions préparés">se préparer</b>)
-                            <input type="text" pattern="nous étions préparés">
+                            <input type="text" class="extra-wide" pattern="nous étions préparés">
                             .
 
                             Nous (<b title="étions allés">aller</b>)
@@ -207,23 +207,23 @@
                             avec eux pendant un moment.
 
                             Puis, nous (<b title="sommes montés">monter</b>)
-                            <input type="text" pattern="sommes montés">
+                            <input type="text" class="wide" pattern="sommes montés">
                             à notre chambre.
 
                             Nous (<b title="avons pris">prendre</b>)
                             <input type="text" pattern="avons pris">
                             une douche et nous (<b title="nous sommes habillés">s’habiller</b>)
-                            <input type="text" pattern="nous sommes habillés">
+                            <input type="text" class="extra-wide" pattern="nous sommes habillés">
                             pour aller manger.
 
                             Au centre du village, certains commerces (<b title="avaient disparu">disparaître</b>)
-                            <input type="text" pattern="avaient disparu">
+                            <input type="text" class="wide" pattern="avaient disparu">
                             et d’autres (<b title="étaient">être</b>)
                             <input type="text" pattern="étaient">
                             nouveaux.
 
                             Le lendemain, et les autres jours après, nous (<b title="sommes allés|allions">aller</b>)
-                            <input type="text" pattern="sommes allés|allions">
+                            <input type="text" class="wide" pattern="sommes allés|allions">
                             à la plage qui (<b title="était">être</b>)
                             <input type="text" pattern="était">
                             à deux minutes d’où nous (<b title="logions">loger</b>)
@@ -233,7 +233,7 @@
                             sur le sable.
 
                             Nous (<b title="nous sommes reposés">se reposer</b>)
-                            <input type="text" pattern="nous sommes reposés">
+                            <input type="text" class="extra-wide" pattern="nous sommes reposés">
                             toute la semaine avant de revenir à la maison.
                         </p>
                     </li>
@@ -269,7 +269,7 @@
                             <input type="text" pattern="n'oubliait pas|n'avait pas oublié">
                             la nappe et les ustensiles de couleurs dont nous
                             (<b title="nous servions">se servir</b>)
-                            <input type="text" pattern="nous servions">
+                            <input type="text" class="wide" pattern="nous servions">
                             seulement à cette occasion et mon père (<b title="mettait|avait mis">mettre</b>)
                             <input type="text" pattern="mettait|avait mis">
                             dans l’auto les ballons et jeux qui amuseraient tout le monde.
@@ -289,7 +289,7 @@
                             acheter de la crème glacée.
 
                             La dernière année, où nous (<b title="avons participé">participer</b>)
-                            <input type="text" pattern="avons participé">
+                            <input type="text" class="wide" pattern="avons participé">
                             à cette activité, il (<b title="pleuvait|a plu">pleuvoir</b>)
                             <input type="text" pattern="pleuvait|a plu">
                             et il (<b title="faisait">faire</b>)
@@ -297,19 +297,19 @@
                             trop froid.
 
                             Nous (<b title="ne pouvions pas|n'avons pas pu">ne pouvoir pas</b>)
-                            <input type="text" pattern="ne pouvions pas|n'avons pas pu">
+                            <input type="text" class="wide" pattern="ne pouvions pas|n'avons pas pu">
                             jouer beaucoup et plusieurs voisins ne (<b title="sont pas venus">venir pas</b>)
-                            <input type="text" pattern="sont pas venus">
+                            <input type="text" class="wide" pattern="sont pas venus">
                             .
 
                             Après quelques heures, nous (<b title="sommes rentrés">rentrer</b>)
-                            <input type="text" pattern="sommes rentrés">
+                            <input type="text" class="wide" pattern="sommes rentrés">
                             à la maison très déçus.
 
                             Nous (<b title="avons mangé">manger</b>)
                             <input type="text" pattern="avons mangé">
                             le repas dans le salon et nous (<b title="n'avons pas eu">ne avoir pas</b>)
-                            <input type="text" pattern="n'avons pas eu">
+                            <input type="text" class="wide" pattern="n'avons pas eu">
                             de crème glacée.
 
                             L’année suivante, mon père (<b title="était mort">mourir</b>)
@@ -319,13 +319,13 @@
                             participer à cette fête de quartier.
 
                             Peu de temps après, nous (<b title="avons déménagé">déménager</b>)
-                            <input type="text" pattern="avons déménagé">
+                            <input type="text" class="wide" pattern="avons déménagé">
                             dans un autre coin de la ville qui (<b title="n'organisait">ne organiser</b>)
                             <input type="text" pattern="n'organisait">
                             pas ces types de réjouissances.
 
                             (<b title="J'ai toujours gardé">Je garder toujours</b>)
-                            <input type="text" pattern="[Jj]'ai toujours gardé">
+                            <input type="text" class="wide" pattern="[Jj]'ai toujours gardé">
                             un excellent souvenir de ce pique-nique annuel de mon quartier d’enfance.
                         </p>
                     </li>
@@ -354,8 +354,8 @@
                             beau et je (<b title="n'avais pas">ne pas avoir</b>)
                             <input type="text" pattern="n'avais pas">
                             envie de quitter la maison pour aller rencontrer de nouveaux
-                            amis, comme ma mère me le (<b title="répétait">répéter</b>)
-                            <input type="text" pattern="répétait">
+                            amis, comme ma mère me (<b title="répétait">le répéter</b>)
+                            <input type="text" pattern="le répétait">
                             sans cesse.
 
                             Depuis des semaines, elle (<b title="préparait|avait préparé">préparer</b>)
@@ -376,7 +376,7 @@
                             un grand homme; pour moi, (<b title="c'était">ce être</b>)
                             <input type="text" pattern="c'était">
                             un jour triste où je (<b title="ne pouvais pas">ne pas pouvoir</b>)
-                            <input type="text" pattern="ne pouvais pas">
+                            <input type="text" class="wide" pattern="ne pouvais pas">
                             m’amuser à ma guise.
 
                             Ce matin-là, ma mère (<b title="m'a conduit">me conduire</b>)
@@ -384,7 +384,7 @@
                             à l’autobus.
 
                             J’ai l’impression que nous (<b title="avons attendu">attendre</b>)
-                            <input type="text" pattern="avons attendu">
+                            <input type="text" class="wide" pattern="avons attendu">
                             très longtemps.
 
                             Enfin, l’autobus (<b title="est arrivé">arriver</b>)
@@ -396,7 +396,7 @@
                             L’autobus (<b title="était">être</b>)
                             <input type="text" pattern="était">
                             plein de garçons et de filles que je (<b title="ne connaissais pas">ne pas connaître</b>)
-                            <input type="text" pattern="ne connaissais pas">
+                            <input type="text" class="wide" pattern="ne connaissais pas">
                             .
 
                             À ce moment-là, je (<b title="me suis senti">se sentir</b>)
@@ -404,7 +404,7 @@
                             très malheureux.
 
                             Mais les choses (<b title="ont vite changé">changer vite</b>)
-                            <input type="text" pattern="ont vite changé">
+                            <input type="text" class="wide" pattern="ont vite changé">
                             .
 
                             Quand je (<b title="suis arrivé">arriver</b>)
@@ -426,7 +426,7 @@
                             Sur le tableau de la classe, je (<b title="voyais">voir</b>)
                             <input type="text" pattern="voyais">
                             les lettres de l’alphabet qu’elle (<b title="avait déjà écrites">écrire déjà</b>)
-                            <input type="text" pattern="avait déjà écrites">
+                            <input type="text" class="wide" pattern="avait déjà écrites">
                             .
 
                             Dès ce moment, (<b title="j'ai compris">je comprendre</b>)
