fine-tuning concordance 3

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -82,7 +82,7 @@
                             les derniers devoirs et (<b title="avaient révisé">réviser</b>)
                             <input type="text" class="wide" pattern="avaient révisé">
                             toutes les notes que leur professeur (<b title="avait données">donner</b>)
-                            <input type="text" pattern="avait données">
+                            <input type="text" class="wide" pattern="avait données">
                             .
 
                             <span class="sentence-with-hint">
@@ -146,9 +146,16 @@
 
                             Il (<b title="avait continué">continuer</b>)
                             <input type="text" class="wide" pattern="avait continué">
-                            de fréquenter cette fille qui (<b title="venait">venir</b>)
-                            <input type="text" pattern="venait">
-                            elle aussi de Toronto et,
+                            de fréquenter cette
+                            <span class="sentence-with-hint">
+                                fille <span class="hint"
+                                    title="L’imparfait: c’est une description (pas une action): originaire de Toronto">qui
+                                    (<b title="venait">venir</b>)
+                                </span>
+                                <input type="text" pattern="venait">
+                                elle aussi de Toronto
+                            </span>
+                            et,
                             <span class="sentence-with-hint">
                                 <span class="hint" title="">quelques années plus tard</span>,
                                 ils (<b title="se sont mariés">se marier</b>)
@@ -253,7 +260,7 @@
                             <span class="sentence-with-hint">
                                 <span class="hint" title="">À notre arrivée</span>,
                                 les hommes nous (<b title="ont accueillis">accueillir</b>)
-                                <input type="text" pattern="ont accueillis">
+                                <input type="text" class="wide" pattern="ont accueillis">
                                 chaleureusement
                             </span>
                             et
@@ -346,7 +353,7 @@
                             </span>
 
                             Elle (<b title="n'oubliait pas|n'avait pas oublié">n’oublier pas</b>)
-                            <input type="text" pattern="n'oubliait pas|n'avait pas oublié">
+                            <input type="text" class="wide" pattern="n'oubliait pas|n'avait pas oublié">
                             la nappe et les ustensiles de couleurs dont nous
                             (<b title="nous servions">se servir</b>)
                             <input type="text" class="wide" pattern="nous servions">
